fixed all sliders after adding width and height attr for all the image; resized font of .footerCopyright for improve readability; fixed video player preview and his play button icon; added hexagon.png in sixth section for mobile resolution.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="tech_secTitleBlock firstTitle">
                 <h2 class="animate__animated wow animate__fadeInLeft">Products</h2>
                 <p class="tech_parFontSize animate__animated wow animate__fadeInLeft">
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has <br>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
                     been the industry's standard dummy text.
                 </p>
             </div>
@@ -139,7 +139,7 @@
         <div class="contentBorder thirdContent">
             <div class="thirdContentWrapper">
                 <div class="tech_textBlock thirdTextBlock">
-                    <h1 class="animate__animated wow animate__fadeInLeft">Creative Solutions <br> by Professional Designers</h1>
+                    <h1 class="animate__animated wow animate__fadeInLeft">Creative Solutions by Professional Designers</h1>
                     <p class="tech_parFontSize animate__animated wow animate__fadeInLeftBig">
                         Penatibus sem vitae mollis luctus mi tellus. Maximus eu eleifend
                         aptent dapibus metus maecenas consequat. Elementum interdum a
@@ -165,6 +165,8 @@
                             </a>
                         </div>
                     </div>
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div>
                 </div>
                 <div class="thirdButton">
                     <a href="javascript:void(0)" class="tech_ancButton tech_darkButton animate__animated wow animate__fadeInDown">READ MORE</a>
@@ -172,7 +174,7 @@
             </div>
             <div class="thirdContentVideo">
                 <div class="playerWrapper">
-                    <span id="hoverLayer"></span>
+                    <span id="hoverLayer">.</span>
                     <div class="playerWrapperTextBlock animate__animated wow animate__fadeInRight">
                         <div class="playerIconWrapper">
                             <div id="playerIcon">
@@ -201,49 +203,59 @@
             <div class="tech_secTitleBlock fourthTitle">
                 <h2 class="animate__animated wow animate__fadeInUp">Projects</h2>
                 <p class="tech_parFontSize animate__animated wow animate__fadeInLeft">
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has <br>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
                     been the industry's standard dummy text.
                 </p>
             </div>
             <div class="fourthSlider swiper">
                 <div class="fourthSliderWrapper swiper-wrapper">
                     <div class="fourthSlide swiper-slide wow">
-                        <a class="fourthSlideImage popupTrig" href="./images/min/fourthslide1_min.jpg">
-                            <img src="./images/min/fourthslide1_min.jpg" width="333" height="331" class="swiper-lazy" loading="lazy">
-                        </a>
+                        <div class="fourthSlideImage">
+                            <a class="popupTrig" href="./images/min/fourthslide1_min.jpg">
+                                <img src="./images/min/fourthslide1_min.jpg" width="333" height="331" class="swiper-lazy" loading="lazy">
+                            </a>
+                        </div>
                         <div class="fourthSlideTextBlock">
                             <h3 class="tech_h3FontSize">Kingdom Tower</h3>
                             <p>Marble Flooring</p>
                         </div>
                     </div>
                     <div class="fourthSlide swiper-slide wow">
-                        <a class="fourthSlideImage popupTrig" href="./images/min/fourthslide2_min.jpg">
-                            <img src="./images/min/fourthslide2_min.jpg" width="333" height="333" class="swiper-lazy" loading="lazy">
-                        </a>
+                        <div class="fourthSlideImage">
+                            <a class="popupTrig" href="./images/min/fourthslide2_min.jpg">
+                                <img src="./images/min/fourthslide2_min.jpg" width="333" height="333" class="swiper-lazy" loading="lazy">
+                            </a>
+                        </div>
                         <div class="fourthSlideTextBlock">
                             <h3 class="tech_h3FontSize">Dubai Mall</h3>
                             <p>Wood Flooring</p>
                         </div>
                     </div>
                     <div class="fourthSlide swiper-slide wow">
-                        <a class="fourthSlideImage popupTrig" href="./images/min/fourthslide3_min.jpg">
-                            <img src="./images/min/fourthslide3_min.jpg" width="333" height="333" loading="lazy">
-                        </a>
+                        <div class="fourthSlideImage">
+                            <a class="popupTrig" href="./images/min/fourthslide3_min.jpg">
+                                <img src="./images/min/fourthslide3_min.jpg" width="333" height="333" loading="lazy">
+                            </a>
+                        </div>
                         <div class="fourthSlideTextBlock">
                             <h3 class="tech_h3FontSize">King Road Offices</h3>
                             <p>Outdoor Flooring</p>
                         </div>
                     </div>
                     <div class="fourthSlide swiper-slide wow">
-                        <a class="fourthSlideImage popupTrig" href="./images/min/fourthslide4_min.jpg">
-                            <img src="./images/min/fourthslide4_min.jpg" width="333" height="333" loading="lazy">
-                        </a>
+                        <div class="fourthSlideImage">
+                            <a class="popupTrig" href="./images/min/fourthslide4_min.jpg">
+                                <img src="./images/min/fourthslide4_min.jpg" width="333" height="333" loading="lazy">
+                            </a>
+                        </div>
                         <div class="fourthSlideTextBlock">
                             <h3 class="tech_h3FontSize">Beach Tower Alupang</h3>
                             <p>Wood Flooring</p>
                         </div>
                     </div>
                 </div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
             </div>
             <div class="fourthButton">
                 <a href="javascript:void(0)" class="tech_ancButton tech_darkButton animate__animated wow animate__fadeInDown">VIEW ALL</a>
@@ -255,7 +267,7 @@
             <div class="tech_secTitleBlock fifthTitle">
                 <h2 class="animate__animated wow animate__fadeInRight">The Collections</h2>
                 <p class="tech_parFontSize animate__animated wow animate__fadeInDown">
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has <br>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
                     been the industry's standard dummy text.
                 </p>
             </div>
@@ -378,10 +390,10 @@
                     <h3>Products</h3>
                 </div>
                 <ul class="footerColList tech_parFourteen collapsible">
-                    <li class="changed">Sand Stone</li>
-                    <li>Stone</li>
-                    <li>Cement</li>
-                    <li>Soft Stone</li>
+                    <li><a class="changed" href="javascript:void(0)">Sand Stone</a></li>
+                    <li><a href="javascript:void(0)">Stone</a></li>
+                    <li><a href="javascript:void(0)">Cement</a></li>
+                    <li><a href="javascript:void(0)">Soft Stone</a></li>
                 </ul>
             </div>
         </div>
@@ -391,9 +403,9 @@
                     <h3>Services</h3>
                 </div>
                 <ul class="footerColList tech_parFourteen collapsible">
-                    <li>Measurement Service</li>
-                    <li>Product Advice</li>
-                    <li>Interior Design</li>
+                    <li><a href="javascript:void(0)">Measurement Service</a></li>
+                    <li><a href="javascript:void(0)">Product Advice</a></li>
+                    <li><a href="javascript:void(0)">Interior Design</a></li>
                 </ul>
             </div>
         </div>
@@ -403,8 +415,8 @@
                     <h3>Contact Information</h3>
                 </div>
                 <p class="tech_parFourteen collapsible">
-                    3181 Al Imam Saud Ibn Abdul Aziz Branch Rd, <br>
-                    An Nuzhah, Riyadh 12474, <br>
+                    3181 Al Imam Saud Ibn Abdul Aziz Branch Rd,
+                    An Nuzhah, Riyadh 12474,
                     Saudi Arabia
                 </p>
 
@@ -427,7 +439,6 @@
         </div>
     </div>
 </footer>
-
 <script src="./libs/jquery/jquery-3.7.1.min.js"></script>
 <script src="./jQuery/header.js"></script>
 <script src="./jQuery/main.js"></script>
