changed quality of images; changed min to phone number input.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <img src="./images/min/logo.png" width="162" height="57" loading="lazy">
                     </div>
                     <form action="" id="callbackForm">
-                        <input class="tech_parFontSize" name="userPhone" type="number" id="phoneNumber" placeholder="Phone number" maxlength="15">
+                        <input class="tech_parFontSize" name="userPhone" type="number" id="phoneNumber" placeholder="Phone number" maxlength="15" min="0">
                         <input class="tech_parFontSize" name="gmail" type="email" id="email" placeholder="Email" maxlength="50">
                         <input class="tech_parFontSize" name="userName" type="text" id="name" placeholder="Your name" minlength="1" maxlength="64">
                         <button type="submit" class="tech_ancButton tech_darkButton">SUBMIT</button>
@@ -88,8 +88,8 @@
                 <div class="swiper-wrapper tech_cards sliderWrapper">
                     <div class="swiper-slide wow firstSliderCard sliderRowCard">
                         <div class="firstGalleryImage">
-                            <a href="./images/min/firstgallery1_min.jpg" class="popupTrig">
-                                <img class="swiper-lazy" src="./images/min/firstgallery1_min.jpg" width="575" height="618" loading="lazy">
+                            <a href="./images/firstGallery1.jpg" class="popupTrig">
+                                <img class="swiper-lazy" src="./images/firstGallery1.jpg" width="575" height="618" loading="lazy">
                             </a>
                             <div class="galleryTextBlock">
                                 <h3 class="tech_h3FontSize">Bathroom Tiles</h3>
@@ -99,8 +99,8 @@
                     </div>
                     <div class="swiper-slide wow firstSliderCard sliderRowCard">
                         <div class="firstGalleryImage">
-                            <a href="./images/min/firstgallery2_min.jpg" class="popupTrig">
-                                <img class="swiper-lazy" src="./images/min/firstgallery2_min.jpg" width="339" height="618" loading="lazy">
+                            <a href="./images/firstGallery2.jpg" class="popupTrig">
+                                <img class="swiper-lazy" src="./images/firstGallery2.jpg" width="339" height="618" loading="lazy">
                             </a>
                             <div class="galleryTextBlock">
                                 <h3 class="tech_h3FontSize">Marble</h3>
@@ -110,8 +110,8 @@
                     </div>
                     <div class="swiper-slide wow firstSliderCard sliderColumnCard">
                         <div class="firstGalleryImage">
-                            <a href="./images/min/firstgallery3_min.jpg" class="popupTrig">
-                                <img class="swiper-lazy" src="./images/min/firstgallery3_min.jpg" width="454" height="274" loading="lazy">
+                            <a href="./images/firstGallery3.jpg" class="popupTrig">
+                                <img class="swiper-lazy" src="./images/firstGallery3.jpg" width="454" height="274" loading="lazy">
                             </a>
                             <div class="galleryTextBlock">
                                 <h3 class="tech_h3FontSize">Outdoor Flooring</h3>
@@ -119,8 +119,8 @@
                             </div>
                         </div>
                         <div class="firstGalleryImage">
-                            <a href="./images/min/firstgallery4_min.jpg" class="popupTrig">
-                                <img src="./images/min/firstgallery4_min.jpg" width="454" height="274" loading="lazy">
+                            <a href="./images/firstGallery4.jpg" class="popupTrig">
+                                <img src="./images/firstGallery4.jpg" width="454" height="274" loading="lazy">
                             </a>
                             <div class="galleryTextBlock">
                                 <h3 class="tech_h3FontSize">Kitchen Interior</h3>
@@ -163,18 +163,18 @@
                 <div class="thirdSlider swiper">
                     <div class="thirdSliderWrapper swiper-wrapper">
                         <div class="thirdSliderSlide swiper-slide wow">
-                            <a class="popupTrig" href="./images/min/thirdgallery1_min.jpg">
-                                <img class="swiper-lazy" src="./images/min/thirdgallery1_min.jpg" width="257" height="325" loading="lazy">
+                            <a class="popupTrig" href="./images/thirdgallery1.jpg">
+                                <img class="swiper-lazy" src="./images/thirdgallery1.jpg" width="257" height="325" loading="lazy">
                             </a>
                         </div>
                         <div class="thirdSliderSlide swiper-slide wow">
-                            <a class="popupTrig" href="./images/min/thirdgallery2_min.jpg">
-                                <img class="swiper-lazy" src="./images/min/thirdgallery2_min.jpg" width="257" height="325" loading="lazy">
+                            <a class="popupTrig" href="./images/thirdgallery2.jpg">
+                                <img class="swiper-lazy" src="./images/thirdgallery2.jpg" width="257" height="325" loading="lazy">
                             </a>
                         </div>
                         <div class="thirdSliderSlide swiper-slide wow">
-                            <a class="popupTrig" href="./images/min/thirdgallery3_min.jpg">
-                                <img class="swiper-lazy" src="./images/min/thirdgallery3_min.jpg" width="257" height="325" loading="lazy">
+                            <a class="popupTrig" href="./images/thirdgallery3.jpg">
+                                <img class="swiper-lazy" src="./images/thirdgallery3.jpg" width="257" height="325" loading="lazy">
                             </a>
                         </div>
                     </div>
@@ -224,8 +224,8 @@
                 <div class="fourthSliderWrapper swiper-wrapper">
                     <div class="fourthSlide swiper-slide wow">
                         <div class="fourthSlideImage">
-                            <a class="popupTrig" href="./images/min/fourthslide1_min.jpg">
-                                <img src="./images/min/fourthslide1_min.jpg" width="333" height="331" class="swiper-lazy" loading="lazy">
+                            <a class="popupTrig" href="./images/fourthSlide1.jpg">
+                                <img src="./images/fourthSlide1.jpg" width="333" height="331" class="swiper-lazy" loading="lazy">
                             </a>
                         </div>
                         <div class="fourthSlideTextBlock">
@@ -235,8 +235,8 @@
                     </div>
                     <div class="fourthSlide swiper-slide wow">
                         <div class="fourthSlideImage">
-                            <a class="popupTrig" href="./images/min/fourthslide2_min.jpg">
-                                <img src="./images/min/fourthslide2_min.jpg" width="333" height="333" class="swiper-lazy" loading="lazy">
+                            <a class="popupTrig" href="./images/fourthSlide2.jpg">
+                                <img src="./images/fourthSlide2.jpg" width="333" height="333" class="swiper-lazy" loading="lazy">
                             </a>
                         </div>
                         <div class="fourthSlideTextBlock">
@@ -246,8 +246,8 @@
                     </div>
                     <div class="fourthSlide swiper-slide wow">
                         <div class="fourthSlideImage">
-                            <a class="popupTrig" href="./images/min/fourthslide3_min.jpg">
-                                <img src="./images/min/fourthslide3_min.jpg" width="333" height="333" loading="lazy">
+                            <a class="popupTrig" href="./images/fourthSlide3.jpg">
+                                <img src="./images/fourthSlide3.jpg" width="333" height="333" loading="lazy">
                             </a>
                         </div>
                         <div class="fourthSlideTextBlock">
@@ -257,8 +257,8 @@
                     </div>
                     <div class="fourthSlide swiper-slide wow">
                         <div class="fourthSlideImage">
-                            <a class="popupTrig" href="./images/min/fourthslide4_min.jpg">
-                                <img src="./images/min/fourthslide4_min.jpg" width="333" height="333" loading="lazy">
+                            <a class="popupTrig" href="./images/fourthSlide4.jpg">
+                                <img src="./images/fourthSlide4.jpg" width="333" height="333" loading="lazy">
                             </a>
                         </div>
                         <div class="fourthSlideTextBlock">
@@ -296,7 +296,7 @@
                 </div>
                 <div class="fifthCatalogueCard">
                     <div class="fifthCatalogueImage">
-                        <img src="./images/min/prod2_min.jpg" width="333" height="333" loading="lazy">
+                        <img src="./images/prod2.jpg" width="333" height="333" loading="lazy">
                     </div>
                     <div class="fifthCatalogueTextBlock">
                         <h3 class="tech_h3FontSize">Zurich Pearl 60×60</h3>
@@ -305,7 +305,7 @@
                 </div>
                 <div class="fifthCatalogueCard">
                     <div class="fifthCatalogueImage">
-                        <img src="./images/min/prod3_min.jpg" width="333" height="333" loading="lazy">
+                        <img src="./images/prod3.jpg" width="333" height="333" loading="lazy">
                     </div>
                     <div class="fifthCatalogueTextBlock">
                         <h3 class="tech_h3FontSize">Zurich Grey 60×60</h3>
@@ -350,7 +350,7 @@
                 </div>
                 <div class="fifthCatalogueCard">
                     <div class="fifthCatalogueImage">
-                        <img src="./images/min/prod8_min.jpg" width="333" height="333" loading="lazy">
+                        <img src="./images/prod8.jpg" width="333" height="333" loading="lazy">
                     </div>
                     <div class="fifthCatalogueTextBlock">
                         <h3 class="tech_h3FontSize">Sicily Grey 30×60</h3>
